Write match data to all team number sheets